--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only C:/Users/kiriy/flea-market-backend/flea-market-backend/src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "typeorm": "typeorm-ts-node-commonjs -d ./src/config/ormconfig.ts",
@@ -23,6 +23,17 @@
   "homepage": "https://github.com/あなたのアカウント/flea-market-backend#readme",
   "description": "",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.1",
+    "@types/http-errors": "^2.0.4",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.15.3",
+    "@types/stripe": "^8.0.416",
+    "@types/supertest": "^6.0.3",
     "@aws-sdk/client-s3": "^3.817.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
@@ -43,17 +54,6 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^5.0.1",
-    "@types/http-errors": "^2.0.4",
-    "@types/jest": "^29.5.14",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/multer": "^1.4.12",
-    "@types/node": "^22.15.3",
-    "@types/stripe": "^8.0.416",
-    "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
     "supertest": "^7.1.1",
     "ts-jest": "^29.3.4",
