--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/あなたのアカウント/flea-market-backend#readme",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.817.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
@@ -34,7 +35,6 @@
     "@types/node": "^22.15.3",
     "@types/stripe": "^8.0.416",
     "@types/supertest": "^6.0.3",
-    "@aws-sdk/client-s3": "^3.817.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -45,6 +45,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.4",
     "pg": "^8.15.6",
     "pino": "^9.7.0",
     "reflect-metadata": "^0.2.2",
@@ -54,6 +55,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.17",
     "jest": "^29.7.0",
     "supertest": "^7.1.1",
     "ts-jest": "^29.3.4",
