--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
-    "@types/nodemailer": "^6.4.17",
     "@types/express": "^5.0.1",
     "@types/http-errors": "^2.0.4",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.3",
+    "@types/nodemailer": "^6.4.17",
     "@types/stripe": "^8.0.416",
     "@types/supertest": "^6.0.3",
     "bcryptjs": "^3.0.2",
@@ -50,6 +50,7 @@
     "pg": "^8.15.6",
     "pino": "^9.7.0",
     "reflect-metadata": "^0.2.2",
+    "resend": "^4.6.0",
     "stripe": "^18.0.0",
     "typeorm": "^0.3.22",
     "wanakana": "^5.3.1",
