--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/lodash": "^4.17.17",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@types/react-router-dom": "^5.3.3",
     "@chakra-ui/react": "^3.19.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.79.0",
+    "@types/lodash": "^4.17.17",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@types/react-router-dom": "^5.3.3",
     "antd": "^5.25.3",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.56.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
+    "socket.io-client": "^4.8.1",
     "swr": "^2.3.3",
     "yup": "^1.6.1",
     "zustand": "^5.0.5"
