feat: Implement chat functionality

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "pino": "^9.7.0",
     "reflect-metadata": "^0.2.2",
     "resend": "^4.6.0",
+    "socket.io": "^4.8.1",
     "stripe": "^18.0.0",
     "typeorm": "^0.3.22",
     "wanakana": "^5.3.1",
